[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Phone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Background.tres" type="Material" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://avataaars (1).png" type="Texture" id=5]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://avataaars (2).png" type="Texture" id=7]
[ext_resource path="res://Denied-Stamp-PNG-Image.png" type="Texture" id=8]
[ext_resource path="res://avataaars (3).png" type="Texture" id=9]
[ext_resource path="res://avataaars (5).png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.568627, 1, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.337255, 0.588235, 0.00784314, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 27
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.12549, 0.380392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.933333, 0, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 3
shadow_offset = Vector2( 3, 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0823529 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 2
shadow_offset = Vector2( 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 34
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=12]
size = 41
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 1, 1, 0.266667 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=15]
size = 41
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=16]
size = 83
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=17]
size = 32
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBlur" parent="." instance=ExtResource( 1 )]
show_behind_parent = true

[node name="PhoneMockup" parent="." instance=ExtResource( 2 )]
anchor_left = 0.97
anchor_top = 0.95
anchor_right = 0.97
anchor_bottom = 0.95
margin_left = -330.0
margin_top = -600.0

[node name="Button" type="HBoxContainer" parent="PhoneMockup"]
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept" type="Button" parent="PhoneMockup/Button"]
margin_right = 146.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Accept"

[node name="Reject" type="Button" parent="PhoneMockup/Button"]
margin_left = 150.0
margin_right = 297.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "Reject"

[node name="Round Info" type="VBoxContainer" parent="."]
anchor_left = 0.97
anchor_top = 0.05
anchor_right = 0.97
anchor_bottom = 0.05
margin_left = -326.4
margin_right = 3.59998
margin_bottom = 330.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Round Info"]
material = ExtResource( 3 )
margin_right = 330.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="Round Info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Round Info/Panel/Panel"]
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Misses"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Round Info/Panel/Panel"]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel1" type="Panel" parent="Round Info/Panel/Panel/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.203922 )
margin_left = 6.0
margin_top = 12.0
margin_right = 66.0
margin_bottom = 72.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )

[node name="Panel2" type="Panel" parent="Round Info/Panel/Panel/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.203922 )
margin_left = 70.0
margin_top = 12.0
margin_right = 130.0
margin_bottom = 72.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )

[node name="Panel3" type="Panel" parent="Round Info/Panel/Panel/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.203922 )
margin_left = 134.0
margin_top = 12.0
margin_right = 194.0
margin_bottom = 72.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )

[node name="Panel4" type="Panel" parent="Round Info/Panel/Panel/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.203922 )
margin_left = 198.0
margin_top = 12.0
margin_right = 258.0
margin_bottom = 72.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Round Info"]
margin_top = 153.0
margin_right = 330.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Panel2" type="Panel" parent="Round Info/HBoxContainer"]
material = ExtResource( 3 )
margin_right = 160.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="Round Info/HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Round Info/HBoxContainer/Panel2/Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.2
custom_fonts/font = SubResource( 3 )
text = "Time:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="Round Info/HBoxContainer/Panel2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "12:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Round Info/HBoxContainer"]
material = ExtResource( 3 )
margin_left = 170.0
margin_right = 330.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel" type="Panel" parent="Round Info/HBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Round Info/HBoxContainer/Panel3/Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.2
custom_fonts/font = SubResource( 3 )
text = "Closing:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Round Info/HBoxContainer/Panel3/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "17:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Round Info"]
margin_top = 306.0
margin_right = 330.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 3 )
text = "Hint: Check Vaccination Dates ;)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Panel" type="Panel" parent="."]
visible = false
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_right = 1536.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 12 )
text = "You got caught letting people with fake certifcates inside!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Panel/VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 1536.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 12 )
text = "Congrats! You managed to make the day!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_right = 1536.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_styles/separator = SubResource( 13 )

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_top = 70.0
margin_right = 1536.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 12 )
text = "Allowed Inside : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 1536.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 12 )
text = "Bribes Taken :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Panel/VBoxContainer"]
margin_top = 190.0
margin_right = 1536.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 12 )
text = "Missed Errors : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/VBoxContainer"]
margin_left = 618.0
margin_top = 804.0
margin_right = 918.0
margin_bottom = 864.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 4
size_flags_vertical = 10
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "Quit!"

[node name="Panel2" type="Panel" parent="."]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="GridContainer" parent="Panel2"]
anchor_left = 0.3
anchor_top = 0.05
anchor_right = 0.7
anchor_bottom = 0.6
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel2/TextureRect"]
margin_right = 382.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="Panel2/TextureRect/TextureRect"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panel2/TextureRect"]
margin_left = 386.0
margin_right = 768.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="Panel2/TextureRect"]
margin_top = 299.0
margin_right = 382.0
margin_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Panel2/TextureRect"]
margin_left = 386.0
margin_top = 299.0
margin_right = 768.0
margin_bottom = 594.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label6" type="Label" parent="Panel2"]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.7
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 16 )
text = "Corona Pass"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.75
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 17 )
text = "By HowlingClouds"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel2"]
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.9
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "PLAY!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PhoneMockup/Button/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="PhoneMockup/Button/Reject" to="." method="_on_Reject_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel2/Button" to="." method="_on_Start_pressed"]
